k8s/linkerd/namespace.yaml
{
  "apiVersion": "v1",
  "kind": "Namespace",
  "metadata": {
    "name": "linkerd-poc"
  }
}
