k8s/linkerd/y-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: y-deployment
  namespace: linkerd-poc
  labels:
    app: y-deployment
    version: "1.0.0"
spec:
  replicas: 2
  selector:
    matchLabels:
      component: y-api
  template:
    metadata:
      annotations:
        # sidecar.istio.io/inject: "true"      
        linkerd.io/inject: enabled
      labels:
        component: y-api
    spec:
      containers:
        - name: y-api
          image: y-service
          # imagePullPolicy: Always
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
