k8s/linkerd/x-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: x-service
  namespace: linkerd-poc
spec:
  type: LoadBalancer
  # type: NodePort
  selector:
    component: x-api
  ports:
    - port: 3001
      targetPort: 80
