k8s/linkerd/y-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: y-service
  namespace: linkerd-poc
spec:
  type: ClusterIP
  # type: NodePort
  selector:
    component: y-api
  ports:
    - port: 3000
      targetPort: 80
