k8s/linkerd/z-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: z-service
  namespace: linkerd-poc
spec:
  type: ClusterIP
  # type: NodePort
  selector:
    component: z-api
  ports:
    - port: 3000
      targetPort: 80
